[package]
name = "scratch-asm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
extend = "1.2.0"
fs_extra = "1.3.0"
itertools = "0.13.0"
strum = { version = "0.26.2", features = ["derive"] }
symspell = "0.4.3"
uuid = { version = "1.8.0", features = ["v4"] }
zip = "2.1.3"
zip-extensions = "0.8.0"
